# oxicoin

./: Cargo.toml  README.md
src/: base58.rs  curve.rs  field.rs  format.rs  lib.rs  macros.rs  traits.rs  utils.rs  varint.rs
src/core/: fetcher.rs  input.rs  mod.rs  output.rs  script.rs  tx.rs
src/secp256k1/: crypto.rs  curve.rs  field.rs  mod.rs  signature.rs
src/secp256k1/snapshots/: iotacoin__secp256k1__crypto__tests__create_and_validate_signature.snap
tests/: secp256k1.rs
tests/snapshots/: secp256k1__create_and_validate_signature.snap
