[package]
name = "iotacoin"
version = "0.1.0"
authors = ["Kevin Del Castillo <quebin31@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
lazy_static = "1"
num-bigint = { version = "0.3", features = ["rand"] }
num-integer = "0.1"
num-traits = "0.2"
rand = "0.7"
thiserror = "1"
