[package]
name = "iotacoin"
version = "0.1.0"
authors = ["Kevin Del Castillo <quebin31@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
boolinator = "2"
bytes = "1"
hex-literal = "0.3"
hmac = "0.10"
lazy_static = "1"
num-bigint = { version = "0.3", features = ["rand"] }
num-integer = "0.1"
num-traits = "0.2"
rand = "0.7"
ripemd160 = "0.9"
sha2 = "0.9"
thiserror = "1"
tokio = { version = "1", features = ["io-util"] }
tokio-stream = "0.1"
tokio-util = { version = "0.6", features = ["io"] }

[dev-dependencies]
insta = "1"
