[package]
name = "oxicoin"
version = "0.1.0"
authors = ["Kevin Del Castillo <quebin31@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
boolinator = "2"
byteorder = "1"
bytes = "1"
dashmap = "4"
derivative = "2"
hex = "0.4"
hex-literal = "0.3"
hmac = "0.10"
hyper = { version = "0.14", features = ["client", "tcp", "http1"] }
lazy_static = "1"
num-bigint = { version = "0.3", features = ["rand"] }
num-integer = "0.1"
num-traits = "0.2"
rand = "0.7"
ripemd160 = "0.9"
sha2 = "0.9"
thiserror = "1"

[dev-dependencies]
insta = "1"
